[gd_scene load_steps=5 format=3 uid="uid://ipehxoj477db"]

[ext_resource type="StyleBox" uid="uid://cgxwrhnuyhe72" path="res://Styles/decision_panel_style.tres" id="1_rtwqn"]
[ext_resource type="PackedScene" uid="uid://c16s6rxycn7r4" path="res://Scenes/preference_selection.tscn" id="2_hmytp"]
[ext_resource type="Script" uid="uid://bjndqogsxv2o7" path="res://Scripts/option.gd" id="2_tx2dh"]
[ext_resource type="PackedScene" uid="uid://5ii4odjs77y8" path="res://Scenes/delete_button.tscn" id="3_oh5tq"]

[node name="Option" type="PanelContainer"]
mouse_filter = 1
theme_override_styles/panel = ExtResource("1_rtwqn")
script = ExtResource("2_tx2dh")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="Elements" type="HBoxContainer" parent="Margin"]
layout_mode = 2

[node name="SelectedCheck" type="CheckBox" parent="Margin/Elements"]
visible = false
layout_mode = 2
focus_mode = 0
mouse_filter = 1

[node name="Data" type="VBoxContainer" parent="Margin/Elements"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Content" type="HBoxContainer" parent="Margin/Elements/Data"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="Margin/Elements/Data/Content"]
layout_mode = 2
size_flags_horizontal = 3
text = "Option name"

[node name="Delete" parent="Margin/Elements/Data/Content" instance=ExtResource("3_oh5tq")]
layout_mode = 2

[node name="PreferenceSelection" parent="Margin/Elements/Data" instance=ExtResource("2_hmytp")]
layout_mode = 2

[connection signal="toggled" from="Margin/Elements/SelectedCheck" to="." method="_on_selected_check_toggled"]
[connection signal="pressed" from="Margin/Elements/Data/Content/Delete" to="." method="_on_delete_pressed"]
[connection signal="preference_changed" from="Margin/Elements/Data/PreferenceSelection" to="." method="_on_preference_selection_preference_changed"]
